--- a/app/src/main/res/layout/item_image_layer.xml
+++ b/app/src/main/res/layout/item_image_layer.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="@drawable/retangle_bound"
-                android:padding="15dp">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_gravity="center"
+             android:background="@drawable/retangle_bound"
+             android:padding="15dp">
 
     <ImageView
         android:id="@+id/image_view_adding"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_gravity="center"
         android:src="@drawable/ic_add_black_24dp"/>
 
-</LinearLayout>
+</FrameLayout>
