--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:id="@+id/bar_layer"
         android:layout_width="match_parent"
         android:layout_height="70dp"
+        android:visibility="visible"
         android:layout_gravity="center"
         android:gravity="center"/>
 
