--- a/app/src/main/res/layout/item_image_layer.xml
+++ b/app/src/main/res/layout/item_image_layer.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_gravity="center"
-             android:background="@drawable/retangle_bound"
-             android:padding="15dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:background="@drawable/bg_blue_gray"
+    android:padding="5dp">
 
-    <ImageView
+    <EditText
         android:id="@+id/image_view_adding"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:src="@drawable/ic_add_black_24dp"/>
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginEnd="@dimen/margin_5dp"
+        android:layout_marginStart="@dimen/margin_5dp"
+        android:layout_weight="1"
+        android:cursorVisible="false"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:gravity="center"
+        android:inputType="number"
+        android:maxLength="1"
+        android:minEms="2"
+        android:textSize="@dimen/text_size"
+        android:textStyle="bold" />
 
-</FrameLayout>
+</LinearLayout>
